--- a/app/views/kintais/index.html.erb
+++ b/app/views/kintais/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Kintais#index</h1>
-<p>Find me in app/views/kintais/index.html.erb</p>
+<h1 class="title">バイト勤怠システム</h1>
+  <p>○○さんがログインしています</p>
+  <div id="container">
+      <button class="btn shukkin">出勤</button>
+      <button class="btn taikin">退勤</button>
+  </div>
+
+  <div id="container">
+    <button class="btn">ログイン</button>
+    <button class="btn">ログアウト</button>
+  <button class="btn">管理者</button>
+  </div>
+
