--- a/app/views/kintais/index.html.erb
+++ b/app/views/kintais/index.html.erb
@@ -1,13 +1,17 @@
 <h1 class="title">バイト勤怠システム</h1>
   <p>○○さんがログインしています</p>
+  <p>※入力後はログアウトを<span>必ず</span>するように！</p>
   <div id="container">
-      <button class="btn shukkin">出勤</button>
-      <button class="btn taikin">退勤</button>
+      <button class="btn shukkin">出勤時クリック</button>
+      <button class="btn taikin">退勤時クリック</button>
   </div>
 
   <div id="container">
-    <button class="btn">ログイン</button>
-    <button class="btn">ログアウト</button>
-  <button class="btn">管理者</button>
+    <button class="btn">入力前にログイン</button>
+    <button class="btn">入力後にログアウト</button>
+  <button class="btn">管理者用ページ</button>
   </div>
 
+  <div id="container">
+    <button class="btn">新しく来た方はコチラで登録して下さい</button>
+  </div>
