--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
             <%= f.label :tel%>
           </div>
           <div class='field input'>
-            <%= f.email_field :tel%>
+            <%= f.name_field :tel%>
           </div>
         </div>
         <div class='actions'>
