--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
         <%= f.label :tel%>
       </div>
       <div class='field input'>
-        <%= f.email_field :tel%>
+        <%= f.text_field :tel%>
       </div>
     </div>
     <div class='field'>
