ユーザー編集機能の実装

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<h2>Edit Account</h2>
+
       <h5>アカウントの編集</h5>
-      <%= link_to "ログアウト",destroy_user_session_path, method: :delete, class: 'btn'%>
-      <%= link_to "main", :back, class: 'btn'%>
+      <button class='btns'><%= link_to "ログアウト",destroy_user_session_path, method: :delete, class: 'link'%></button>
+      <button class='btns'><%= link_to "トップに戻る", :back,class:'link' %></button>
       <%= form_with model: current_user, local: true do |f|%>
         <div class='field'>
           <div class='field label'>
@@ -16,10 +16,10 @@
             <%= f.label :tel%>
           </div>
           <div class='field input'>
-            <%= f.name_field :tel%>
+            <%= f.text_field :tel%>
           </div>
         </div>
         <div class='actions'>
-          <%= f.submit "Update", class: 'btn'%>
+          <%= f.submit "更新後コチラをクリック", class: 'btn'%>
         </div>
       <% end %>
