--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -32,9 +32,64 @@ h1 {
 .btn {
   -webkit-transition: all 1s;
   transition: all 1s;
+  overflow: hidden;
 }
 
 .btn:hover {
   background-color: black;
+}
+
+.btns {
+  font-family: 'ヒラギノ明朝 ProN', Courier, monospace;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  padding: 10px 40px;
+  margin: 50px 0;
+  font-weight: 600;
+  cursor: pointer;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.btns::before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+  z-index: -1;
+}
+
+.btns:hover {
+  color: white;
+}
+
+.btns:hover::before {
+  -webkit-transform: none;
+          transform: none;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+}
+
+h5 {
+  text-align: center;
+  font-size: 50px;
+  font-family: 'ヒラギノ明朝 ProN', Courier, monospace;
 }
 /*# sourceMappingURL=user.css.map */
