--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,3 +1,6 @@
+$cblack: black;
+$cwhite:white;
+
 h1{
   font-size: 30px;
   width: 100%;
@@ -29,7 +32,55 @@ h1{
 
 .btn{
   transition: all 1s;
+  overflow: hidden;
   &:hover{
     background-color: black;
   }
+}
+
+.btns{
+    font-family: 'ヒラギノ明朝 ProN', Courier, monospace;
+    background-color: $cwhite;
+    color: $cblack;
+    border: 1px solid $cblack;
+    padding: 10px 40px;
+    margin:50px 0;
+    font-weight: 600;
+    cursor: pointer;
+    transition:all .5s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+  
+    &::before{
+      content: '';
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      background-color: $cblack;
+      position: absolute;
+      top:0;
+      left:0;
+      transform: translateX(-100%);
+      transition:transform .3s;
+      z-index: -1;
+    }
+  
+    &:hover{
+      color:$cwhite;
+      &::before{
+        transform: none;
+      }
+    }
+}
+
+.link{
+  text-decoration: none;
+  color: $cblack;
+}
+
+h5{
+  text-align: center;
+  font-size: 50px;
+  font-family: 'ヒラギノ明朝 ProN', Courier, monospace;
 }
