--- a/app/views/devise/shared/_link.html.erb
+++ b/app/views/devise/shared/_link.html.erb
@@ -3,6 +3,6 @@
 <% end %>
 
 <%=if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name), class: 'btn'%>
+  <%= link_to "新規登録はコチラ", new_registration_path(resource_name), class: 'btn'%>
 <% end %>
 
