新規作成画面表示

--- a/app/views/kintais/index.html.erb
+++ b/app/views/kintais/index.html.erb
@@ -2,8 +2,7 @@
       <p>現在、<%= link_to current_user.name, edit_user_path(current_user)%>さんがログインしています</p>
   <p>※入力後はログアウトを<span>必ず</span>するように！</p>
   <div id="container">
-      <button class="btn shukkin">出勤時クリック</button>
-      <button class="btn taikin">退勤時クリック</button>
+      <button class="btn shukkin">出退勤時クリック</button>
   </div>
 
   <div id="container">
