--- a/app/views/kintais/index.html.erb
+++ b/app/views/kintais/index.html.erb
@@ -2,7 +2,9 @@
       <p>現在、<%= link_to current_user.name, edit_user_path(current_user)%>さんがログインしています</p>
   <p>※入力後はログアウトを<span>必ず</span>するように！</p>
   <div id="container">
-      <button class="btn shukkin">出退勤時クリック</button>
+      <button class="btn shukkin"><%=link_to "出勤時クリック",new_kintaikintai_path,class:'link'%></button>
+      <button class="btn taikin"><%=link_to "退勤時クリック",new_tkintai_path,class:'link'%></button>
+      <button class="btn sihuto">シフト提出はコチラをクッリク</button>
   </div>
 
   <div id="container">
